# team-chai

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: main.py  pyproject.toml  requirements.txt
backend/core/: lifespan.py  settings.py
backend/db/: connection.py  session_queries.py  steps_queries.py  user_account_queries.py
backend/routes/: auth.py  models.py  steps.py
backend/src/: main.py
backend/src/db/: connection.py  session_queries.py  steps_queries.py  user_account_queries.py
backend/src/routes/: models.py  steps.py
backend/tests/: conftest.py
backend/tests/fixtures/: db.py  fastapi.py
backend/tests/integration/: test_session_queries.py  test_user_account_queries.py
backend/tests/unit/: test_steps_queries.py
backend_api/: pyproject.toml  requirements.txt
backend_api/src/: main.py
backend_api/src/core/: lifespan.py  logging.py  settings.py
backend_api/src/db/: auth_queries.py  session_queries.py  steps_queries.py  user_queries.py  workout_logs_queries.py
backend_api/src/ml_model/: utils.py
backend_api/src/routes/: auth.py  models.py  steps.py  user.py  workout.py
backend_api/tests/: conftest.py
backend_api/tests/fixtures/: fastapi.py
backend_api/tests/integration/: test_auth_queries.py  test_auth_routes.py  test_session_queries.py  test_steps_queries.py  test_steps_routes.py
backend_api/tests/unit/: test_auth_queries.py  test_session_queries.py  test_steps_queries.py  test_user_account_queries.py
frontend/: App.tsx  app.json  nativewind-env.d.ts  package-lock.json  package.json  tsconfig.json
frontend/api/: auth.ts  client.ts  steps.ts  user.ts  workout.ts
frontend/components/: loginButton.tsx  navbar.tsx  profileDetailsComponents.tsx  screenAuthButtons.tsx  signupButton.tsx  stepProgressBar.tsx  targetStepsDisplay.tsx  workoutLog.tsx  workoutLogComponents.tsx
frontend/context/: authContext.tsx  navContext.tsx
frontend/hooks/: useStepCounter.ts  useStepData.ts
frontend/screens/: home.tsx  login.tsx  userFeed.tsx  userProfile.tsx  userSignUp.tsx
frontend/styles/: page.ts
frontend/utils/: datetime.ts
ml_model/: pyproject.toml
ml_model/dataset/: generation.py  sample.py  step_count.py
ml_model/model_output/: step_goal_model_lin_regression.json  step_goal_model_xgboost.json
ml_model/training/: helpers.py  linear_regression.py  random_forest.py  xgboost.py
ml_model/validation/: dataset.py  model.py
test-database/: docker-compose.yaml  init.sql
