[project]
name = "ml-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
include = ["dataset", "training", "validation"]
extraPaths = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
